--- a/css/style.css
+++ b/css/style.css
@@ -339,10 +339,22 @@ ul.style6 .first {
 	height:450px;
 	border-radius:10px;
 }
-#divMap {
-	/* margin-left:196px; */
+#leftCol {
 	position:relative;
 	float:left;
+	padding:0px;
+}
+#linkCell {
+	height:40px;
+	vertical-align:bottom;
+}
+a#lnkBookmark {
+	text-decoration:none;
+}
+#divMap {
+	/* margin-left:196px; */
+	/*position:relative;
+	float:left;*/
 	background-image:url('containerBack.png');
 	background-color:rgba(256,256,256,1.0);
 	padding:0px 0px 0px 0px;
